Implement complete skill tree system following approved SOLID-compliant architecture
Implements all 6 phases of the skill tree system plan:

PHASE 1: Domain Models (7 files)
- SkillBranch enum (ECONOMY, TERRITORY, COMBAT)
- SkillEffect record for buff effects
- SkillDefinition record for skill configuration
- RespecConfig record for respec costs
- GuildSkillTree mutable entity for skill state
- SkillUnlockResult and RespecResult for operation feedback

PHASE 2: Persistence (2 files)
- GuildSkillTreeRepository interface with full CRUD operations
- JdbcGuildSkillTreeRepository supporting all DB types (SQLite, MySQL, PostgreSQL, H2, MariaDB)
- Uses existing Sql.upsertGuildSkillTree() helpers

PHASE 3: Configuration (1 file)
- SkillTreeRegistry loads skills from config.yml skill-tree section
- Validates prerequisite chains for circular dependencies
- Provides skill querying and filtering

PHASE 4: Services (2 files)
- SkillBuffProvider for buff value lookups in BuffApplicationService
- SkillTreeService orchestrating unlocks, respecs, and SP awards

PHASE 5: Integration (1 modification)
- Modified ProgressionService to award skill points on guild levelups
- Added SkillTreeService and SkillTreeRegistry dependencies
- Integrated SP awarding in processAutoLevelUps()

PHASE 6: Dependency Injection
- Updated GuildsModule with skill tree bindings
- All @Singleton and @Inject annotations properly configured

Key Architecture Decisions:
- UUID guild IDs throughout (aligns with ongoing UUID refactoring)
- Separate buff categories for skills vs projects (prevents conflicts)
- Dynamic buff calculation by BuffApplicationService (no stored buffs)
- Respec consumes from guild vault only (enforces coordination)
- All SOLID principles applied (SRP, OCP, LSP, ISP, DIP)

File Locations:
- Domain: src/main/java/org/aincraft/skilltree/
- Persistence: src/main/java/org/aincraft/skilltree/storage/
- Persistence Impl: src/main/java/org/aincraft/database/repository/

All files compile successfu